# F1-RL

./: .gitignore  CLAUDE.md  DISCREPANCIES.md  README.md  pyproject.toml  start.bat
.claude/: PROJECT_VISION.md  TECHNICAL_DESIGN.md
.claude/agents/: app-integration-engineer.md  env-engineer.md  physics-engineer.md  reviewer.md  test-engineer.md  training-engineer.md
.claude/plan/: phase-2-realistic-tracks-plan.md  phase-3a-training-core-plan.md  phase-3b-realistic-physics-plan.md  phase-4-many-circuits-plan.md  phase-5-many-cars-plan.md  phase-6-racing-plan.md
.claude/specs/: phase-1-design-ui.md  phase-2-realistic-tracks.md  phase-3a-training-core.md  phase-3b-realistic-physics.md  phase-4-many-circuits.md  phase-5-many-cars.md  phase-6-racing.md
configs/: default.yaml
configs/experiment/: calendar_dynamic.yaml  calendar_racing.yaml  calendar_selfplay.yaml  rbr_dynamic.yaml  rbr_ppo.yaml
configs/track/: albert_park.yaml  bahrain.yaml  baku.yaml  catalunya.yaml  cota.yaml  hungaroring.yaml  interlagos.yaml  jeddah.yaml  las_vegas.yaml  lusail.yaml  madring.yaml  marina_bay.yaml  mexico_city.yaml  miami.yaml  monaco.yaml  montreal.yaml  monza.yaml  oval.yaml  red_bull_ring.yaml  shanghai.yaml  silverstone.yaml  spa.yaml  suzuka.yaml  yas_marina.yaml  zandvoort.yaml
data/tracks/: _build_report.json  _catalog.json  albert_park.api.json  albert_park.npz  bahrain.api.json  bahrain.npz  baku.api.json  baku.npz  catalunya.api.json  catalunya.npz  cota.api.json  cota.npz  hungaroring.api.json  hungaroring.npz  interlagos.api.json  interlagos.npz  jeddah.api.json  jeddah.npz  las_vegas.api.json  las_vegas.npz  lusail.api.json  lusail.npz  marina_bay.api.json  marina_bay.npz  mexico_city.api.json  mexico_city.npz  miami.api.json  miami.npz  monaco.api.json  monaco.npz  montreal.api.json  montreal.npz  monza.api.json  monza.npz  red_bull_ring.api.json  red_bull_ring.npz  shanghai.api.json  shanghai.npz  silverstone.api.json  silverstone.npz
scripts/: bake_track_json.py  benchmark_sps.py  build_all_tracks.py
src/f1rl/: __init__.py
src/f1rl/env/: __init__.py  collisions.py  conditions.py  factory.py  multi_agent.py  observations.py  pool.py  rewards.py  single_agent.py
src/f1rl/physics/: __init__.py  base.py  dynamic.py  factory.py  kinematic.py  tires.py
src/f1rl/render/: __init__.py  renderer.py
src/f1rl/server/: __init__.py  app.py  messages.py
src/f1rl/sim/: __init__.py  autopilot.py  loop.py  policy_pilot.py  recorder.py  timing.py
src/f1rl/track/: __init__.py  build.py  geometry.py  loader.py  oval.py  schema.py
src/f1rl/train/: __init__.py  benchmark.py  calendar_benchmark.py  calibrate.py  callbacks.py  checkpointing.py  curriculum.py  evaluate.py  selfplay.py  selfplay_eval.py  train.py  wandb_logger.py  warmstart.py
src/f1rl/utils/: __init__.py  config.py  seeding.py
tests/: conftest.py  test_calendar_benchmark.py  test_checkpoint.py  test_circuit_pool.py  test_collisions.py  test_config.py  test_curriculum.py  test_env_api.py  test_env_sampling.py  test_grip_pipeline.py  test_lap_benchmark.py  test_multi_agent_env.py  test_observations.py  test_physics_dynamic.py  test_physics_kinematic.py  test_recorder.py  test_rewards.py  test_seeding.py  test_selfplay_smoke.py  test_server.py  test_smoke_train.py  test_smoke_train_dynamic.py  test_termination.py  test_timing.py  test_track_build.py  test_track_oval.py  test_warmstart.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: format.ts  main.ts  state.test.ts  state.ts  styles.css  tokens.css  types.ts
web/src/hud/: telemetry.ts
web/src/input/: keyboard.ts
web/src/net/: socket.ts
web/src/replay/: player.ts
web/src/ui/: calendar.ts  config_panel.test.ts  config_panel.ts  lights.test.ts  lights.ts  policy_picker.ts  selector.ts
web/src/viewport/: camera.ts  renderer.ts
