[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-rl"
version = "0.1.0"
description = "A 2D top-down Formula 1 simulator where every car is driven by a learned policy."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mibrahim2003" }]
keywords = ["formula1", "reinforcement-learning", "ppo", "simulation", "racing"]

# Core runtime dependencies (training + simulation + rendering).
# FastF1 is intentionally NOT here: it is a build-time-only tool for the offline
# track pipeline — see the [project.optional-dependencies] `trackbuild` extra.
dependencies = [
    "numpy",
    "scipy",
    "gymnasium",
    "pettingzoo",
    "supersuit",
    "stable-baselines3",
    "torch>=2.2",
    "pygame>=2.5",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "wandb>=0.17",
    "omegaconf>=2.3",
    # Phase 1 app backend: local FastAPI/WebSocket engine that streams car state.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Offline circuit-build pipeline (FastF1 telemetry -> processed Track .npz).
# Run once per circuit at build time; never imported in the training loop.
trackbuild = ["fastf1>=3.4"]

# Linting, formatting, and tests.
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/Mibrahim2003/F1-RL"

[tool.hatch.build.targets.wheel]
packages = ["src/f1rl"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear,
# SIM simplify, NPY numpy-specific rules.
select = ["E", "W", "F", "I", "UP", "B", "SIM", "NPY"]

[tool.ruff.lint.isort]
known-first-party = ["f1rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
